ligolang/src/test/contracts/negative/interpreter_tests/test_failure1.mligo
let test =
  failwith "I am failing"